--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,19 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout your code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK
+      # 2️⃣ Set up Java
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build with Maven
+      # 3️⃣ Build the JAR
+      - name: Build Spring Boot JAR
         run: mvn clean package -DskipTests
 
-      - name: Copy jar to EC2
+      # 4️⃣ Copy the JAR to EC2
+      - name: Copy JAR to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -31,12 +35,14 @@ jobs:
           source: "target/simpleAwsProject-1.0-SNAPSHOT.jar"
           target: "/home/ec2-user/"
 
-      - name: Restart app on EC2
+      # 5️⃣ Restart systemd service on EC2
+      - name: Restart Spring Boot systemd service
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            pkill -f 'java -jar' || true
-            nohup java -jar /home/ec2-user/simpleAwsProject-1.0-SNAPSHOT.jar --server.address=0.0.0.0 > app.log 2>&1 &
+            sudo systemctl daemon-reload
+            sudo systemctl restart simpleaws
+            sudo systemctl status simpleaws --no-pager
