--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,33 @@ jobs:
       - name: Deploy on EC2
         run: |
           ssh -i ${{ secrets.EC2_SSH_KEY }} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            #!/bin/bash
-            JAR_PATH=/home/ec2-user/simpleAwsProject-1.0-SNAPSHOT.jar
-            PID=$(pgrep -f 'java -jar')
-            if [ -n "$PID" ]; then
-              echo "Stopping existing application with PID $PID"
-              kill -9 $PID
-            fi
-            echo "Starting application"
-            nohup java -jar $JAR_PATH > /dev/null 2>&1 &          
+          SERVICE_FILE=/etc/systemd/system/simpleaws.service
           JAR_PATH=/home/ec2-user/simpleAwsProject-1.0-SNAPSHOT.jar
+
+          if [ ! -f "$SERVICE_FILE" ]; then
+            sudo bash -c "cat > $SERVICE_FILE << 'EOL'
+          [Unit]
+          Description=Spring Boot Simple AWS Project
+          After=network.target
+  
+          [Service]
+          User=ec2-user
+          WorkingDirectory=/home/ec2-user
+          ExecStart=/usr/bin/java -jar $JAR_PATH --server.address=0.0.0.0
+          SuccessExitStatus=143
+          Restart=always
+          RestartSec=10
+          StandardOutput=file:/home/ec2-user/app.log
+          StandardError=file:/home/ec2-user/app.log
+          
+          [Install]
+          WantedBy=multi-user.target
+          EOL"
+          sudo systemctl daemon-reload
+          sudo systemctl enable simpleaws
+          fi
+          
+          sudo pkill -f "java -jar $JAR_PATH" || true
+          sudo systemctl restart simpleaws
+          sudo systemctl status simpleaws --no-pager
+          EOF
